# psalm-pairs

./: .gitignore  CLAUDE.md  README.md  cronscript.sh  envsetup.sh  fetch-psalms.py  pyproject.toml  uvbootstrap.py
.github/workflows/: claude-code-review.yml
psalm_pairs/: __init__.py  db.py  evaluate_pairs.py  generate_pairs.py  openai_client.py  psalms.py  website.py
psalms_json/: psalm_001.json  psalm_002.json  psalm_003.json  psalm_004.json  psalm_005.json  psalm_006.json  psalm_007.json  psalm_008.json  psalm_009.json  psalm_010.json  psalm_011.json  psalm_012.json  psalm_013.json  psalm_014.json  psalm_015.json  psalm_016.json  psalm_017.json  psalm_018.json  psalm_019.json  psalm_020.json  psalm_021.json  psalm_022.json  psalm_023.json  psalm_024.json  psalm_025.json  psalm_026.json  psalm_027.json  psalm_028.json  psalm_029.json  psalm_030.json  psalm_031.json  psalm_032.json  psalm_033.json  psalm_034.json  psalm_035.json  psalm_036.json  psalm_037.json  psalm_038.json  psalm_039.json  psalm_040.json  (+110 more)
