[project]
name = "psalm-pairs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "openai>=1.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "umap-learn>=0.5.5",
]
